redis-cluster/redis-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless-service
  labels:
    app: redis
spec:
  ports:
  - name: redis-port
    port: 6379
  clusterIP: None
  selector:
    app: redis
    appCluster: redis-cluster
