redis-cluster/redis-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: redis-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: redis
    
spec:
  rules:
    - host: redis.sillycat.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: redis-service
              servicePort: 6379
