redis-cluster/redis-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-route
  namespace: default
spec:
  entryPoints:
  - redis
  routes:
  - match: HostSNI(`redis.sillycat.net`)
    kind: Rule
    services:
      - name: redis-service
        protocol: "TCP"
        port: 6379
